force-app/main/default/objects/ProductSpecification__c/fields/Opp5__c.field-meta.xml
<CustomField>
    <fullName>Opp5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>機器仕様</relationshipLabel>
    <relationshipName>ProductSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>