force-app/main/default/objects/ProductSpecification__c/fields/OpportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageName__c</fullName>
    <formula>TEXT( Opp5__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>案件フェーズ</label>
    <type>Text</type>
</CustomField>