force-app/main/default/objects/ProductSpecification__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>オプション有無</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>鍵付ケーブルカバー</fullName>
            </value>
            <value>
                <fullName>リモコンケーブル50ｍ</fullName>
            </value>
            <value>
                <fullName>リモコンケーブル20ｍ</fullName>
            </value>
            <value>
                <fullName>CT接続用ケーブル25ｍ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>