force-app/main/default/objects/ProductSpecification__c/fields/OrderAccuracy__c.field-meta.xml
<CustomField>
    <fullName>OrderAccuracy__c</fullName>
    <description>案件と紐づけた時に自動的に案件の受注予定受注確度が設定されます。</description>
    <formula>Opp5__r.Probability</formula>
    <label>受注確度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>