force-app/main/default/objects/ProductSpecification__c/fields/OrderingMethod__c.field-meta.xml
<CustomField>
    <fullName>OrderingMethod__c</fullName>
    <label>発注方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>総合評価方式</fullName>
            </value>
            <value>
                <fullName>価格のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>