force-app/main/default/objects/ProductSpecification__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>その他</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>