force-app/main/default/objects/ProductSpecification__c/fields/OutputPower__c.field-meta.xml
<CustomField>
    <fullName>OutputPower__c</fullName>
    <label>定格出力電圧</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>