force-app/main/default/objects/ProductSpecification__c/fields/OutpuySignal__c.field-meta.xml
<CustomField>
    <fullName>OutpuySignal__c</fullName>
    <label>出力信号ＩＦ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MODBUS/TCP</fullName>
            </value>
            <value>
                <fullName>RS-485</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>