force-app/main/default/objects/ProductSpecification__c/fields/OutsideEnclosure__c.field-meta.xml
<CustomField>
    <fullName>OutsideEnclosure__c</fullName>
    <label>屋外エンクロージャ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>