force-app/main/default/objects/ProductSpecification__c/fields/PaintingColor__c.field-meta.xml
<CustomField>
    <fullName>PaintingColor__c</fullName>
    <label>指定塗装色</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準（5Y7/1)</fullName>
            </value>
            <value>
                <fullName>非標準（ ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>