force-app/main/default/objects/ProductSpecification__c/fields/PeripheralBoard__c.field-meta.xml
<CustomField>
    <fullName>PeripheralBoard__c</fullName>
    <label>周辺盤</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高圧入力盤</fullName>
            </value>
            <value>
                <fullName>高圧入力分岐盤</fullName>
            </value>
            <value>
                <fullName>高圧変圧器盤</fullName>
            </value>
            <value>
                <fullName>保守バイパス盤</fullName>
            </value>
            <value>
                <fullName>入出力盤</fullName>
            </value>
            <value>
                <fullName>出力盤</fullName>
            </value>
            <value>
                <fullName>出力分岐盤</fullName>
            </value>
            <value>
                <fullName>他場所手配</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>