force-app/main/default/objects/ProductSpecification__c/fields/PlaceToSet__c.field-meta.xml
<CustomField>
    <fullName>PlaceToSet__c</fullName>
    <label>設置場所</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>屋内</fullName>
            </value>
            <value>
                <fullName>屋外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>