force-app/main/default/objects/ProductSpecification__c/fields/PowerConCapacity01__c.field-meta.xml
<CustomField>
    <fullName>PowerConCapacity01__c</fullName>
    <label>パワコン総容量（kW）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>