force-app/main/default/objects/ProductSpecification__c/fields/PowerConMaker01__c.field-meta.xml
<CustomField>
    <fullName>PowerConMaker01__c</fullName>
    <label>パワコンメーカー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMEIC</fullName>
            </value>
            <value>
                <fullName>日立</fullName>
            </value>
            <value>
                <fullName>安川電機</fullName>
            </value>
            <value>
                <fullName>日新電機</fullName>
            </value>
            <value>
                <fullName>明電舎</fullName>
            </value>
            <value>
                <fullName>GSユアサ</fullName>
            </value>
            <value>
                <fullName>ファーウェイ</fullName>
            </value>
            <value>
                <fullName>SMA</fullName>
            </value>
            <value>
                <fullName>デルタ電子</fullName>
            </value>
            <value>
                <fullName>その他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>