force-app/main/default/objects/ProductSpecification__c/fields/PowerConMakerOther01__c.field-meta.xml
<CustomField>
    <fullName>PowerConMakerOther01__c</fullName>
    <label>パワコンメーカーその他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>