force-app/main/default/objects/ProductSpecification__c/fields/PowerConMakerOther02__c.field-meta.xml
<CustomField>
    <fullName>PowerConMakerOther02__c</fullName>
    <label>パワコンメーカーその他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>