force-app/main/default/objects/ProductSpecification__c/fields/PowerConMoldName__c.field-meta.xml
<CustomField>
    <fullName>PowerConMoldName__c</fullName>
    <label>パワコン形名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PVF-T0100</fullName>
            </value>
            <value>
                <fullName>PVF-T0100S</fullName>
            </value>
            <value>
                <fullName>PVF-T0100R</fullName>
            </value>
            <value>
                <fullName>PVF-L0100</fullName>
            </value>
            <value>
                <fullName>PVL-L0175</fullName>
            </value>
            <value>
                <fullName>PVF-T0250</fullName>
            </value>
            <value>
                <fullName>PVL-L0250</fullName>
            </value>
            <value>
                <fullName>PVL-L0250ER(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L0450ER(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L0490</fullName>
            </value>
            <value>
                <fullName>PVL-L0500</fullName>
            </value>
            <value>
                <fullName>PVL-L0500E(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L500ER(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L0630E(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L0665E</fullName>
            </value>
            <value>
                <fullName>PVL-L0750E</fullName>
            </value>
            <value>
                <fullName>PVL-L1000E(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L1000ERM(J)</fullName>
            </value>
            <value>
                <fullName>PVL-L1250ER（J)</fullName>
            </value>
            <value>
                <fullName>PVH-L1250ER(J)</fullName>
            </value>
            <value>
                <fullName>PVL-1667ER(J)</fullName>
            </value>
            <value>
                <fullName>PVH-L2500ER(J)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>