force-app/main/default/objects/ProductSpecification__c/fields/PowerFailureCompensationTime__c.field-meta.xml
<CustomField>
    <fullName>PowerFailureCompensationTime__c</fullName>
    <label>停電補償時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5分</fullName>
            </value>
            <value>
                <fullName>10分</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>