force-app/main/default/objects/ProductSpecification__c/fields/PowerFailureCompensationTimeOther__c.field-meta.xml
<CustomField>
    <fullName>PowerFailureCompensationTimeOther__c</fullName>
    <label>停電補償時間_その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>