force-app/main/default/objects/ProductSpecification__c/fields/ProdName__c.field-meta.xml
<CustomField>
    <fullName>ProdName__c</fullName>
    <label>本体品名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B3シリーズ</fullName>
            </value>
            <value>
                <fullName>B3R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>