force-app/main/default/objects/ProductSpecification__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>SBU名で検索頂くと、SBU毎の全ての製品結果を表示できます</inlineHelpText>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>機器仕様</relationshipLabel>
    <relationshipName>Product2Ids</relationshipName>
    <type>Lookup</type>
</CustomField>