force-app/main/default/objects/ProductSpecification__c/fields/Quantity1__c.field-meta.xml
<CustomField>
    <fullName>Quantity1__c</fullName>
    <label>台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>