force-app/main/default/objects/ProductSpecification__c/fields/RunningFanction__c.field-meta.xml
<CustomField>
    <fullName>RunningFanction__c</fullName>
    <label>自立運転機能 ※100kWのみ可</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>