force-app/main/default/objects/ProductSpecification__c/fields/RunningType__c.field-meta.xml
<CustomField>
    <fullName>RunningType__c</fullName>
    <label>運転方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>並列冗長（条件付）</fullName>
            </value>
            <value>
                <fullName>並列冗長運転</fullName>
            </value>
            <value>
                <fullName>待機冗長運転</fullName>
            </value>
            <value>
                <fullName>単機運転</fullName>
            </value>
            <value>
                <fullName>発電機同志の並列運転（●台）</fullName>
            </value>
            <value>
                <fullName>商用と並列運転</fullName>
            </value>
            <value>
                <fullName>モジュール冗長</fullName>
            </value>
            <value>
                <fullName>並列運転</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>