force-app/main/default/objects/ProductSpecification__c/fields/SaltDamage__c.field-meta.xml
<CustomField>
    <fullName>SaltDamage__c</fullName>
    <label>塩害対策</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重塩害</fullName>
            </value>
            <value>
                <fullName>塩害</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>