force-app/main/default/objects/ProductSpecification__c/fields/ScheduledConstructionSection__c.field-meta.xml
<CustomField>
    <fullName>ScheduledConstructionSection__c</fullName>
    <label>予定工事部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>プラ建</fullName>
            </value>
            <value>
                <fullName>MPEC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>サブコン</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>