force-app/main/default/objects/ProductSpecification__c/fields/ScheduledOrderDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledOrderDate__c</fullName>
    <formula>Opp5__r.CloseDate</formula>
    <inlineHelpText>案件と紐づけた時に自動的に案件の受注予定日が設定されます。</inlineHelpText>
    <label>受注予定日</label>
    <type>Date</type>
</CustomField>