force-app/main/default/objects/ProductSpecification__c/fields/ScheduledSalesDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledSalesDate__c</fullName>
    <formula>Opp5__r.ScheduledSalesDate__c</formula>
    <inlineHelpText>案件と紐づけた時に自動的に案件の売上予定日が設定されます。</inlineHelpText>
    <label>売上予定日</label>
    <type>Date</type>
</CustomField>