force-app/main/default/objects/ProductSpecification__c/fields/ScreenSize__c.field-meta.xml
<CustomField>
    <fullName>ScreenSize__c</fullName>
    <formula>if(
AND(
ScreenSizeVertical__c != null ,
ScreenSizeSide__c != null
),
 Text(ScreenSizeVertical__c * ScreenSizeSide__c)&amp;&apos;㎡&apos; ,
&apos;&apos;
)</formula>
    <inlineHelpText>画面サイズ＿縦(m(メートル））×画面サイズ＿横(m(メートル））の計算結果
※画面サイズ＿縦と画面サイズ＿横の両方が入力されていない場合は計算されません</inlineHelpText>
    <label>画面サイズ</label>
    <type>Text</type>
</CustomField>