force-app/main/default/objects/ProductSpecification__c/fields/ScreenSizeSide__c.field-meta.xml
<CustomField>
    <fullName>ScreenSizeSide__c</fullName>
    <inlineHelpText>単位m(メートル）</inlineHelpText>
    <label>画面サイズ＿横</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>