force-app/main/default/objects/ProductSpecification__c/fields/SecuringEngineersScheduledForDeployment__c.field-meta.xml
<CustomField>
    <fullName>SecuringEngineersScheduledForDeployment__c</fullName>
    <label>配置予定技術者の確保</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未</fullName>
            </value>
            <value>
                <fullName>済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>