force-app/main/default/objects/ProductSpecification__c/fields/SendingDevice__c.field-meta.xml
<CustomField>
    <fullName>SendingDevice__c</fullName>
    <label>送出装置</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>