force-app/main/default/objects/ProductSpecification__c/fields/SolarPowerCapacity__c.field-meta.xml
<CustomField>
    <fullName>SolarPowerCapacity__c</fullName>
    <label>太陽電池総容量（kW）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>