force-app/main/default/objects/ProductSpecification__c/fields/SolarPowerPanelMaker02__c.field-meta.xml
<CustomField>
    <fullName>SolarPowerPanelMaker02__c</fullName>
    <label>太陽電池パネルメーカー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>シャープ</fullName>
            </value>
            <value>
                <fullName>京セラ</fullName>
            </value>
            <value>
                <fullName>パナソニック</fullName>
            </value>
            <value>
                <fullName>ジンコソーラー</fullName>
            </value>
            <value>
                <fullName>カナディアンソーラー</fullName>
            </value>
            <value>
                <fullName>JAソーラー</fullName>
            </value>
            <value>
                <fullName>その他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>