force-app/main/default/objects/ProductSpecification__c/fields/SolarPowerPanelMaker__c.field-meta.xml
<CustomField>
    <fullName>SolarPowerPanelMaker__c</fullName>
    <label>太陽電池パネルメーカー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>シャープ京セラパナソニックジンコソーラーカナディアンソーラーJAソーラーその他フリー項目</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>