force-app/main/default/objects/ProductSpecification__c/fields/SolarPowerPanelMakerOther01__c.field-meta.xml
<CustomField>
    <fullName>SolarPowerPanelMakerOther01__c</fullName>
    <label>太陽電池パネルメーカーその他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>