force-app/main/default/objects/ProductSpecification__c/fields/SpecialSpecification02__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecification02__c</fullName>
    <label>特殊仕様</label>
    <length>255</length>
    <type>Text</type>
</CustomField>