force-app/main/default/objects/ProductSpecification__c/fields/Standards01__c.field-meta.xml
<CustomField>
    <fullName>Standards01__c</fullName>
    <label>準拠規格</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIS</fullName>
            </value>
            <value>
                <fullName>JEC</fullName>
            </value>
            <value>
                <fullName>JEM</fullName>
            </value>
            <value>
                <fullName>IEC</fullName>
            </value>
            <value>
                <fullName>ANSI</fullName>
            </value>
            <value>
                <fullName>IEEE</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>消防法</fullName>
            </value>
            <value>
                <fullName>電気事業法</fullName>
            </value>
            <value>
                <fullName>国土交通省</fullName>
            </value>
            <value>
                <fullName>MJS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>