force-app/main/default/objects/ProductSpecification__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>始動時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40秒</fullName>
                <default>true</default>
                <label>40秒</label>
            </value>
            <value>
                <fullName>10秒</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>