force-app/main/default/objects/ProductSpecification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受注前</fullName>
            </value>
            <value>
                <fullName>契約時</fullName>
            </value>
            <value>
                <fullName>完成時</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>