force-app/main/default/objects/ProductSpecification__c/fields/StopCount__c.field-meta.xml
<CustomField>
    <fullName>StopCount__c</fullName>
    <label>運転停止可能数／年</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>