force-app/main/default/objects/ProductSpecification__c/fields/SubstationType__c.field-meta.xml
<CustomField>
    <fullName>SubstationType__c</fullName>
    <label>受電方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2回線受電</fullName>
            </value>
            <value>
                <fullName>1回線受電</fullName>
            </value>
            <value>
                <fullName>SNW受電</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>